# LMSwithFastAPI

./: .pre-commit-config.yaml  main.py  metadata.py  pyproject.toml
api/: apiconfig.py  courses.py  login.py  sections.py  users.py
api/services/: auhontication.py  authtoken.py
api/utils/: courses.py  users.py
db/: db_setup.py  db_table_setup.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: courses.py  profile.py  user.py
