[tool.poetry]
name = "learningmanagementsystem(lms)"
version = "0.1.0"
description = ""
authors = ["ratibakhtadze <ratibakhtadze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
